# UOttaHack8

./: MatchScreen.tsx  MatchmakingScreen.tsx  README.md  home.tsx  index.tsx  package-lock.json  server.js  socket.ts  web.tsx  workout.tsx
JavaScript Pose Analysis/backend/: DataAnalyzer.js  VideoAnalyzer.js  movement_criteria.json  package-lock.json  package.json  server.js
JavaScript Pose Analysis/backend/uploads/: video-1768719278341-494639174.webm  video-1768719282609-299777317.webm  video-1768719285427-605268199.webm  video-1768719297174-809769761.webm  video-1768719301330-482798479.webm  video-1768719310938-666106119.webm  (+59 more)
Python Pose Analysis/: data_analysis.py  movement_criteria.json  video_analyzer.py
client/: package.json
client/src/: main.js
cplusplus/: CMakeLists.txt  fixed_packag.deb
frontend/app/: app.json  eslint.config.js  package-lock.json  package.json
nodejs/: package.json
presage/: CMakeLists.txt  libsmartspectra-custom.deb  libsmartspectra-dev_2.1.0_amd64.deb  main.cpp
presage/tmp/DEBIAN/: control
presage/tmp/usr/local/include/smartspectra/: version.hpp
presage/tmp/usr/local/include/smartspectra/container/: background_container.hpp  foreground_container.hpp
presage/tmp/usr/local/include/smartspectra/video_source/: factory.hpp  settings.hpp
presage/tmp/usr/local/include/smartspectra/video_source/camera/: capture_video_source.hpp  v4l2_camera_source.hpp
presage/tmp/usr/local/lib/cmake/SmartSpectra/: SmartSpectraTargets-release.cmake
server/: package.json
server/src/: index.js  socket.js
shared/: protocol.js
(+29 files in other folders)
